# private-locker

./: .dockerignore  .gitignore  Caddyfile  DEPLOY.md  Dockerfile  README.md  VAULT_ARCHITECTURE.md  VAULT_COMPLETE_GUIDE.md  docker-compose.local.yml  docker-compose.yml  pyproject.toml  requirements-deploy.txt  requirements.txt
tests/: conftest.py  test_agent.py  test_api.py  test_database.py  test_document_processor.py  test_encryption.py  test_file_vault.py
vault/: __init__.py  agent.py  agent_pool.py  backup.py  cli.py  config.py  main.py  mcp_server.py  users.py
vault/llm/: prompts.py  router.py
vault/processors/: credentials.py  document.py  memory.py
vault/security/: encryption.py  session.py
vault/storage/: database.py  file_vault.py  vector_store.py
vault/web/static/: manifest.json  sw.js
vault/web/static/css/: style.css
vault/web/static/js/: app.js  auth-effects.js
vault/web/templates/: index.html  landing.html  setup.html  unlock.html
vault_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
